Fixed layout bugs in main, signup and login pages

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -2,7 +2,7 @@ div.login-page {
     padding-top: 200px;
     background-image: url("/assets/images/bg.gif");
     background-size: cover;
-    height: 100vh;
+    padding-bottom: 200px;
 
     .card {
         width: 400px;
